--- a/templates/app/home.html.twig
+++ b/templates/app/home.html.twig
@@ -1,4 +1,6 @@
-<ons-page id="home">
+<ons-page id="home" }}>
+
+
     <script>
         const openMenu = () => {
             document.querySelector('#menu').open();
@@ -12,6 +14,9 @@
 
     </script>
 
+    home stuff here.
+
+
     <ons-toolbar id="home-toolbar">
         <div class="center">Pokémon</div>
 
@@ -22,9 +27,13 @@
         </div>
     </ons-toolbar>
 
+    Where is this content??
+
     <ons-tabbar id="tabbar">
 
-        <ons-tab page="pokemon.html" label="Pokémon" icon="fa-twitter"></ons-tab>
-        <ons-tab page="saved.html" label="Saved"></ons-tab>
+        <ons-tab page="pokemon" label="Pokémon" icon="fa-twitter"></ons-tab>
+        <ons-tab page="saved" label="Saved">
+
+        </ons-tab>
     </ons-tabbar>
 </ons-page>
