--- a/templates/app/index.html.twig
+++ b/templates/app/index.html.twig
@@ -10,13 +10,13 @@
 
   {% block javascripts %}
   {{ parent() }}
-    <script src="components/loader.js"></script>
-    <script src="lib/onsenui/js/onsenui.min.js"></script>
+{#    <script src="components/loader.js"></script>#}
+{#    <script src="lib/onsenui/js/onsenui.min.js"></script>#}
   <script>
     ons.ready(function() {
       console.log("Onsen UI is ready!");
       const navigator = document.querySelector('#navigator');
-      // navigator.resetToPage('home.html');
+      // navigator.resetToPage('home');
     });
 
     const loadPage = (page) => {
@@ -35,11 +35,11 @@
   {% block body %}
 <ons-splitter>
   <!-- The side menu -->
-  <ons-splitter-side id="menu" collapse>
+  <ons-splitter-side id="menu" collapse {{ stimulus_target('app','menu') }}>
     <ons-page>
       <ons-list>
         <ons-list-item onclick="loadPage('about')">About</ons-list-item>
-        <ons-list-item onclick="loadPage('login.html')">Login</ons-list-item>
+        <ons-list-item onclick="loadPage('login')">Login</ons-list-item>
         <ons-list-item onclick="clearLocalStorage()">
           Clear local storage
         </ons-list-item>
@@ -49,7 +49,9 @@
 
   <!-- Everything not in the side menu -->
   <ons-splitter-content>
-    <ons-navigator id="navigator" page="home.html"></ons-navigator>
+    <ons-navigator id="navigator" page="home">
+
+    </ons-navigator>
   </ons-splitter-content>
 </ons-splitter>
 
