--- a/templates/app/pokemon.html.twig
+++ b/templates/app/pokemon.html.twig
@@ -18,7 +18,7 @@
       `));
         }
 
-        document.addEventListener('init', ({ target }) => {
+        document.addEventListener('init', ({target}) => {
             if (target.matches('#pokemon')) {
                 // local storage keys
                 const URL = 'pokemon__url';
@@ -46,13 +46,13 @@
 
                     const list = document.querySelector('#pokemon-list');
                     newPokemon.forEach((name, i) => {
-                        if (i>22) {
+                        appendPokemon(nextPokenumber, name);
+                        if (nextPokenumber > 22) {
                             return;
                         }
-                        appendPokemon(nextPokenumber, name);
 
                         const key = PREFIX + nextPokenumber;
-                        console.log(`Storing ${name} as ${key}`);
+                        console.log(`i${i} Storing ${name} as ${key}`);
                         localStorage.setItem(key, name)
                         nextPokenumber++;
                     });
@@ -80,6 +80,19 @@
             }
         });
     </script>
+
+    <div {{ stimulus_controller('hello') }}>
+        Hola!
+    </div>
+
+    <span {{ stimulus_target('app', 'savedCount') }}>
+        Saved count here?
+    </span>
+
+    <span {{ stimulus_target('app', 'message') }}>
+        message
+    </span>
+
 
     <ons-list id="pokemon-list">
     </ons-list>
