--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -11,7 +11,7 @@
             {% block importmap %}{{ importmap('app') }}{% endblock %}
         {% endblock %}
     </head>
-    <body>
+    <body {{ stimulus_controller('app') }} >
         {% block body %}{% endblock %}
     </body>
 </html>
