--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -32,7 +32,7 @@
                 // };
             </script>
             {#            <script src="https://cdnjs.cloudflare.com/ajax/libs/onsen/2.12.8/js/onsenui.min.js" integrity="sha512-gTBYvF3IPbzY0LLzGILVeSPCbNEGdttGGwFmU/It7aX3UXZzfyn9TaQO9vegWAV24ChabN/YsjZoYrJkdJrOTA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>#}
-            <script src="https://cdn.jsdelivr.net/npm/onsenui@2.12.8/js/onsenui.min.js"></script>
+{#            <script src="https://cdn.jsdelivr.net/npm/onsenui@2.12.8/js/onsenui.min.js"></script>#}
             {{ parent() }}
         {% endblock %}
 
