--- a/templates/app/pokemon.html.twig
+++ b/templates/app/pokemon.html.twig
@@ -1,100 +1,17 @@
-<ons-page id="pokemon">
-
-    <script>
-        const savePokemon = (pokenumber, button) => {
-            addPokemonToGrid(pokenumber);
-            button.parentNode.parentNode.hideExpansion();
-        };
-
-        const appendPokemon = (pokenumber, name) => {
-            const list = document.querySelector('#pokemon-list');
-            list.appendChild(ons.createElement(`
-        <ons-list-item expandable>
-          ${pokenumber} ${name}
-          <div class="expandable-content">
-            <ons-button onclick="savePokemon(${pokenumber}, this)">Save</ons-button>
-          </div>
-        </ons-list-item>
-      `));
-        }
-
-        document.addEventListener('init', ({target}) => {
-            if (target.matches('#pokemon')) {
-                // local storage keys
-                const URL = 'pokemon__url';
-                const PREFIX = 'pokemon__';
-
-                let nextPokenumber = 1;
-                let storedPokemon;
-
-                while ((storedPokemon = localStorage.getItem(PREFIX + nextPokenumber)) !== null) {
-                    console.log(`got ${storedPokemon} from local with key ${PREFIX + nextPokenumber}`);
-                    appendPokemon(nextPokenumber, storedPokemon);
-                    nextPokenumber++;
-                }
-
-                if (!localStorage.getItem(URL)) {
-                    localStorage.setItem(URL, 'https://pokeapi.co/api/v2/pokemon');
-                }
-
-                const get = async () => {
-                    // do the API call and get JSON response
-                    const response = await fetch(localStorage.getItem(URL));
-                    const json = await response.json();
-
-                    const newPokemon = json.results.map(e => e.name);
-
-                    const list = document.querySelector('#pokemon-list');
-                    newPokemon.forEach((name, i) => {
-                        appendPokemon(nextPokenumber, name);
-                        if (nextPokenumber > 22) {
-                            return;
-                        }
-
-                        const key = PREFIX + nextPokenumber;
-                        console.log(`i${i} Storing ${name} as ${key}`);
-                        localStorage.setItem(key, name)
-                        nextPokenumber++;
-                    });
-
-                    localStorage.setItem(URL, json.next);
-
-                    // hide the spinner when all the pages have been loaded
-                    if (!localStorage.getItem(URL)) {
-                        document.querySelector('#after-list').style.display = 'none';
-                    }
-                };
-
-                // get the first set of results as soon as the page is initialised
-                get();
-
-                // at the bottom of the list get the next set of results and append them
-                target.onInfiniteScroll = (done) => {
-                    if (localStorage.getItem(URL)) {
-                        setTimeout(() => {
-                            get();
-                            done();
-                        }, 200);
-                    }
-                };
-            }
-        });
-    </script>
+{% set _sc = 'pokemon' %}
+<ons-page id="pokemon" {{ stimulus_controller(_sc, {max: 3}) }}>
 
     <div {{ stimulus_controller('hello') }}>
         Hola!
     </div>
 
-    <span {{ stimulus_target('app', 'savedCount') }}>
-        Saved count here?
-    </span>
-
     <span {{ stimulus_target('app', 'message') }}>
         message
     </span>
 
-
-    <ons-list id="pokemon-list">
+    <h3>Pokemon-list</h3>
+    <ons-list id="pokemon-list" {{ stimulus_target(_sc, 'list') }}>
+        <ons-list-item>TEST</ons-list-item>
     </ons-list>
 
     <div id="after-list" style="margin: 20px; text-align: center;">
