--- a/templates/app/home.html.twig
+++ b/templates/app/home.html.twig
@@ -1,12 +1,46 @@
-<ons-page id="home" }}>
+<ons-page id="home">
+    <script type="module">
+        import db from './../../assets/db.js';
 
-
-    <script>
         const openMenu = () => {
             document.querySelector('#menu').open();
         };
 
+        const addPokemonToGrid = (row) => {
+            console.log('adding ', row);
+            const pokenumber = row.id;
+            // now add the new pokemon to the grid
+            const grid = document.querySelector('#grid');
+            const cell = document.createElement('div');
+            cell.onclick = () => document.querySelector('#navigator')
+                .bringPageTop('gallery.html', { data: { pokenumber, savedPokemon } });
+
+            const image = document.createElement('img');
+            image.setAttribute('src', `img/${pokenumber}.png`);
+            cell.appendChild(image);
+            grid.appendChild(cell);
+        };
+
+
+        console.error(document.getElementById('menu'));
+
+        // prechange happens on tabs only
         document.addEventListener('prechange', ({ target, tabItem }) => {
+            let pageName = tabItem.getAttribute('page');
+            console.log('prechange', target, tabItem, pageName);
+            if (pageName == 'saved') {
+                db.savedTable.filter(n => n.owned).each( row => {
+                    addPokemonToGrid(row);
+                    console.log('row ', row);
+                    // this.savedCountTarget.innerHTML = count;
+                });
+
+                // db.savedTable.count().then ( c => this)
+                // getAll().toArray().then ( x => {
+                //     console.log(x);
+                // });
+                console.log('populate the grid.');
+            }
             if (target.matches('#tabbar')) {
                 document.querySelector('#home-toolbar .center').innerHTML = tabItem.getAttribute('label');
             }
@@ -21,7 +55,7 @@
         <div class="center">Pokémon</div>
 
         <div class="left">
-            <ons-toolbar-button onclick="openMenu()">
+            <ons-toolbar-button {{ stimulus_action('app','openMenu', 'click') }}>
                 <ons-icon icon="md-menu"></ons-icon>
             </ons-toolbar-button>
         </div>
