--- a/templates/app/index.html.twig
+++ b/templates/app/index.html.twig
@@ -1,11 +1,6 @@
 {% extends "base.html.twig" %}
   {% block stylesheets %}
   {{ parent() }}
-
-{#  <link rel="stylesheet" href="components/loader.css">#}
-{#  <link rel="stylesheet" href="lib/onsenui/css/onsenui.css">#}
-{#  <link rel="stylesheet" href="lib/onsenui/css/onsen-css-components.css">#}
-{#  <link rel="stylesheet" href="css/style.css">#}
   {% endblock %}
 
   {% block javascripts %}
@@ -13,12 +8,6 @@
 {#    <script src="components/loader.js"></script>#}
 {#    <script src="lib/onsenui/js/onsenui.min.js"></script>#}
   <script>
-    ons.ready(function() {
-      console.log("Onsen UI is ready!");
-      const navigator = document.querySelector('#navigator');
-      // navigator.resetToPage('home');
-    });
-
     const loadPage = (page) => {
       document.querySelector('#menu').close();
       console.log('loading page ' + page);
@@ -63,7 +52,12 @@
 
   <!-- Everything not in the side menu -->
   <ons-splitter-content>
-    <ons-navigator id="navigator" {{ stimulus_target('app', 'navigator') }}page="home">
+    <ons-navigator
+
+            id="navigator"
+            {{ stimulus_target('app', 'navigator') }}
+            page="home"
+    > <!-- the starting page -->
 
     </ons-navigator>
   </ons-splitter-content>
