--- a/templates/app/saved.html.twig
+++ b/templates/app/saved.html.twig
@@ -20,28 +20,29 @@
         // Now add some values.
 
 
-        const addPokemonToGrid = pokenumber => {
-            // we save a list so we can pass it to the gallery
-            savedPokemon.push(pokenumber);
-
-
-            // now add the new pokemon to the grid
-            const grid = document.querySelector('#grid');
-            const cell = document.createElement('div');
-            cell.onclick = () => document.querySelector('#navigator')
-                .bringPageTop('gallery.html', { data: { pokenumber, savedPokemon } });
-
-            const image = document.createElement('img');
-            image.setAttribute('src', `img/${pokenumber}.png`);
-
-            cell.appendChild(image);
-            grid.appendChild(cell);
-        };
+        // const addPokemonToGrid = pokenumber => {
+        //     // we save a list so we can pass it to the gallery
+        //     savedPokemon.push(pokenumber);
+        //
+        //
+        //     // now add the new pokemon to the grid
+        //     const grid = document.querySelector('#grid');
+        //     const cell = document.createElement('div');
+        //     cell.onclick = () => document.querySelector('#navigator')
+        //         .bringPageTop('gallery.html', { data: { pokenumber, savedPokemon } });
+        //
+        //     const image = document.createElement('img');
+        //     image.setAttribute('src', `img/${pokenumber}.png`);
+        //
+        //     cell.appendChild(image);
+        //     grid.appendChild(cell);
+        // };
     </script>
 
     <div id="content">
         <div id="grid">
-            grid values
+            grid values.
+            Random: {{ random(9999) }}
         </div>
     </div>
 </ons-page>
