--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -10,6 +10,7 @@
         {% block javascripts %}
             {% block importmap %}{{ importmap('app') }}{% endblock %}
         {% endblock %}
+        {{ pwa() }}
     </head>
     <body {{ stimulus_controller('app') }} >
         {% block body %}{% endblock %}
