--- a/templates/app/index.html.twig
+++ b/templates/app/index.html.twig
@@ -56,6 +56,18 @@
             {{ route|title }}
           </ons-list-item>
         {% endfor %}
+          <ons-list-item>
+              <div class="left">
+                  <ons-icon icon="md-github" class="list-item__icon"></ons-icon>
+              </div>
+              <div class="center">
+                  Github Repo
+                  <!-- onclick?
+                  https://github.com/survos-sites/pokemon
+                  -->
+              </div>
+          </ons-list-item>
+
         {#                  onclick="loadPage('{{ route }}')"#}
 {#        <ons-list-item onclick="loadPage('login')">Login</ons-list-item>#}
 {#        <ons-list-item onclick="loadPage('login')">Login</ons-list-item>#}
