--- a/templates/app/home.html.twig
+++ b/templates/app/home.html.twig
@@ -64,11 +64,11 @@
 
     <ons-tabbar id="tabbar">
 
-        <ons-tab page="pokemon" label="Pokémon" icon="fa-twitter"></ons-tab>
+        <ons-tab page="pokemon" label="Home" icon="fa-home"></ons-tab>
         <ons-tab page="saved" label="Saved">
             <span class="notification" {{ stimulus_target('app', 'savedCount') }}>
             </span>
-
         </ons-tab>
+        <ons-tab page="share" label="Share" icon="fa-qrcode"></ons-tab>
     </ons-tabbar>
 </ons-page>
