--- a/templates/onsPage.html.twig
+++ b/templates/onsPage.html.twig
@@ -6,7 +6,8 @@
     <ons-toolbar>
         {% block toolbar %}
         <div class="left">
-            <ons-back-button></ons-back-button>
+            {# issue with font not loading #}
+            <ons-back-button>&lt;-</ons-back-button>
         </div>
         {% endblock %}
     </ons-toolbar>
