--- a/templates/onsPage.html.twig
+++ b/templates/onsPage.html.twig
@@ -7,7 +7,7 @@
         {% block toolbar %}
         <div class="left">
             {# issue with font not loading #}
-            <ons-back-button>&lt;-</ons-back-button>
+            <ons-back-button></ons-back-button>
         </div>
         {% endblock %}
     </ons-toolbar>
