--- a/templates/app/about.html.twig
+++ b/templates/app/about.html.twig
@@ -6,14 +6,14 @@
     <div class="center">About</div>
 {% endblock %}
 {% block body %}
-    <script type="module">
-        export function doSomething(x) {
-            let navigator = document.getElementById('navigator');
-            navigator.resetToPage('about', {x: {{ random(9999) }} });
-            console.warn('resetting to page ', x);
-        }
-        window.doSomething = doSomething;
-    </script>
+{#    <script type="module">#}
+{#        export function doSomething(x) {#}
+{#            let navigator = document.getElementById('navigator');#}
+{#            navigator.resetToPage('about', {x: {{ random(9999) }} });#}
+{#            console.warn('resetting to page ', x);#}
+{#        }#}
+{#        window.doSomething = doSomething;#}
+{#    </script>#}
     <p>
         This is a Symfony version of the
         <a href="https://onsen.io/v2/guide/tutorial.html" target="_blank">
