--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,8 +4,9 @@
 {#            <link rel="stylesheet" href="https://unpkg.com/onsenui/css/onsenui.css">#}
 {#            <link rel="stylesheet" href="https://unpkg.com/onsenui/css/onsen-css-components.min.css">#}
 
-            <!-- unpkg down on Sunday,Apr 12, 2024 -->
+            <!-- unpkg down on Sunday,Apr 12, 2024.  Using this loads fonts. -->
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/onsenui@2.12.8/css/onsenui.min.css">
+{#            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/onsenui@2.12.8/css/onsenui-core.min.css">#}
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/onsenui@2.12.8/css/onsen-css-components.min.css">
 
 {#            https://cdn.jsdelivr.net/npm/onsenui@2.12.8/css/onsenui-core.min.css#}
