--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -13,7 +13,8 @@
         {{ pwa() }}
     </head>
 
-    {% set _sc = 'reaction' %}
+{#    {% set _appController = 'app' %}#}
+    {# app_controller handles navigation #}
     <body
             class="app"
             {{ stimulus_controller('app') }} >
