--- a/templates/app/home.html.twig
+++ b/templates/app/home.html.twig
@@ -20,31 +20,6 @@
             grid.appendChild(cell);
         };
 
-        // prechange happens on tabs only
-        // @Todo: move this to stimulus, not html
-        document.addEventListener('prechange', ({ target, tabItem }) => {
-            let pageName = tabItem.getAttribute('page');
-            console.log('prechange', target, tabItem, pageName);
-            if (pageName == 'saved') {
-                const grid = document.querySelector('#grid');
-                grid.innerHTML = '';
-
-                db.savedTable.filter(n => n.owned).each( row => {
-                    addPokemonToGrid(row, grid);
-                    // this.savedCountTarget.innerHTML = count;
-                });
-
-                // db.savedTable.count().then ( c => this)
-                // getAll().toArray().then ( x => {
-                //     console.log(x);
-                // });
-                console.log('populate the grid.');
-            }
-            if (target.matches('#tabbar')) {
-                document.querySelector('#home-toolbar .center').innerHTML = tabItem.getAttribute('label');
-            }
-        });
-
     </script>
 
     home stuff here.
@@ -62,9 +37,10 @@
 
     Where is this content??
 
-    <ons-tabbar id="tabbar">
+    <ons-tabbar id="tabbar" {{ stimulus_target('app','tabbar') }}>
 
         <ons-tab page="pokemon" label="Home" icon="fa-home"></ons-tab>
+        <ons-tab page="gallery" label="Gallery" icon="fa-images"></ons-tab>
         <ons-tab page="saved" label="Saved">
             <span class="notification" {{ stimulus_target('app', 'savedCount') }}>
             </span>
