--- a/templates/components/dexie_twig.html.twig
+++ b/templates/components/dexie_twig.html.twig
@@ -1,10 +1,13 @@
 {% set _sc = 'twigjs' %}
 
-<div{{ attributes }} {{ stimulus_controller(_sc, {
-    twigTemplate: this.twigTemplate
-},
-    controllerOutlets = { 'app': '.app' }
-) }}>
+<div{{ attributes }}
+        {{ stimulus_controller(_sc, {
+            twigTemplate: this.twigTemplate,
+            filter: this.filter|json_encode,
+            store: this.store
+        },
+            controllerOutlets = { 'app': '.app' }
+        ) }}>
 
     <div {{ stimulus_target(_sc, 'content') }}>
         The listing will be here, rendered from the TwigJsComponent <i>Component</i>
