handle refresh event

--- a/templates/app/saved.html.twig
+++ b/templates/app/saved.html.twig
@@ -28,6 +28,7 @@
 
         {% set filter = {owned: true} %}
             <twig:dexie
+                    refreshEvent="saved.prechange"
                     store="savedTable"
                     :filter="filter"
                     :caller="_self"
